--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "avalanche123/imagine-bundle": "v2.1",
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "coresphere/console-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
