--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -27,6 +27,7 @@ twig:
     strict_variables: %kernel.debug%
     globals:
         webSiteName: %param_webSiteName%
+        webSiteVersion: %param_webSiteVersion%
         webSiteDescription: %param_webSiteDescription%
 
 # Assetic Configuration
