--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -13,4 +13,5 @@ parameters:
     secret: todo
 
     param_webSiteName: Guillaume.besset
+    param_webSiteVersion: V 1.1
     param_webSiteDescription: wall Demo
