--- a/src/GbCreation/WallBundle/Resources/config/services.yml
+++ b/src/GbCreation/WallBundle/Resources/config/services.yml
@@ -1,4 +1,5 @@
 parameters:
+    gbcreation.db.table_prefix: prefix_
 #    gb_creation_wall.example.class: GbCreation\WallBundle\Example
 
 
@@ -9,6 +10,12 @@ services:
     gb_creation_wall.antispam:
         class: GbCreation\WallBundle\Antispam\GbcAntispam
         arguments: [3]
+
+    gbcreation.tblprefix_subscriber:
+        class: GbCreation\Subscriber\TablePrefixSubscriber
+        arguments: [%gbcreation.db.table_prefix%]
+        tags:
+            - { name: doctrine.event_subscriber }
 
 #    gb_creation_wall.picture_uploader:
 #        class: GbCreation\WallBundle\Uploader\GbcUploader
