--- a/src/GbCreation/WallBundle/Resources/config/services.yml
+++ b/src/GbCreation/WallBundle/Resources/config/services.yml
@@ -1,5 +1,5 @@
 parameters:
-    gbcreation.db.table_prefix: prefix_
+    gbcreation.db.table_prefix: demo_
 #    gb_creation_wall.example.class: GbCreation\WallBundle\Example
 
 
