--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "avalanche123/imagine-bundle": "v2.1",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "winzou/console-bundle": "dev-master"
+        "coresphere/console-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
