--- a/src/GbCreation/WallBundle/Resources/config/routing.yml
+++ b/src/GbCreation/WallBundle/Resources/config/routing.yml
@@ -146,3 +146,9 @@ gb_creation_admin_stats:
     defaults: { _controller: GbCreationWallBundle:Admin:stats }
     requirements:
         _method:  GET
+
+gb_creation_admin_item_edit_rotate:
+    pattern:  /admin/item/edit/rotate/{rotate}/{id}
+    defaults: { _controller: GbCreationWallBundle:Admin:editItemRotate }
+    requirements:
+        _method:  GET
